Add vibe-based ranks to grumbles and virtue ranks to user profile
